bugs solve : coordiante shift + mouse leave bug

--- a/assign02/css/style.css
+++ b/assign02/css/style.css
@@ -1,3 +1,10 @@
+body {
+    margin: 5px;
+    padding: 0px;
+}
 canvas {
     border: 2px dotted blue;
 }   
+canvas:hover {
+    border: 2px solid red;
+}
